# system-stats-2024

./: Cargo.toml  README.md
.linux/: commands.sh  system-stats.service
src/: main.rs  mongo.rs
